Adding adc & dac examples

--- a/dac_adc_loopback/dac_adc_loopback.uvprojx
+++ b/dac_adc_loopback/dac_adc_loopback.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>timer_sig_gen_isr_hw</OutputName>
+          <OutputName>dac_adc_loopback</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
