--- a/dac_play_sound/dac_play_sound.uvprojx
+++ b/dac_play_sound/dac_play_sound.uvprojx
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\Objects\</OutputDirectory>
-          <OutputName>timer_sig_gen_isr_hw</OutputName>
+          <OutputName>dac_play_sound</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -381,7 +381,7 @@
       </TargetOption>
       <Groups>
         <Group>
-          <GroupName>app source</GroupName>
+          <GroupName>source</GroupName>
           <Files>
             <File>
               <FileName>main.c</FileName>
