--- a/adc_hw_ext_cnv/adc_hw_ext_cnv.uvprojx
+++ b/adc_hw_ext_cnv/adc_hw_ext_cnv.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>Mini-DK2</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6140000::V6.14::ARMCLANG</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
